--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,15 +114,22 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
-@layer base {
-  * {
-    @apply border-border outline-ring/50;
-    margin: 0;
-    padding: 0;
+@keyframes scan {
+  0% {
+    top: 0;
+    opacity: 0.8;
   }
-  body {
-    @apply bg-background text-foreground;
-    margin: 0;
+  50% {
+    top: 100%;
+    opacity: 0.5;
+  }
+  50.1% {
+    top: 0;
+    opacity: 0;
+  }
+  100% {
+    top: 0;
+    opacity: 0.8;
   }
 }
 
@@ -196,4 +203,16 @@
 
 .scrolling-item {
   flex-shrink: 0;
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+    margin: 0;
+    padding: 0;
+  }
+  body {
+    @apply bg-background text-foreground;
+    margin: 0;
+  }
 }
